--- a/Pandas/Data Analysis/Explore/Explore pandas 2.ipynb
+++ b/Pandas/Data Analysis/Explore/Explore pandas 2.ipynb
@@ -14718,8 +14718,326 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "37377f59",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  key key1    Name  Age\n",
+      "0  K0   K0     Jai   27\n",
+      "1  K1   K1  Princi   24\n",
+      "2  K2   K0  Gaurav   22\n",
+      "3  K3   K1    Anuj   32 \n",
+      "\n",
+      "   key key1    Address Qualification\n",
+      "0  K0   K0     Nagpur         Btech\n",
+      "1  K1   K0     Kanpur           B.A\n",
+      "2  K2   K0  Allahabad          Bcom\n",
+      "3  K3   K0    Kannuaj        B.hons\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    " \n",
+    "# Define a dictionary containing employee data \n",
+    "data1 = {'key': ['K0', 'K1', 'K2', 'K3'],\n",
+    "         'key1': ['K0', 'K1', 'K0', 'K1'],\n",
+    "         'Name':['Jai', 'Princi', 'Gaurav', 'Anuj'], \n",
+    "        'Age':[27, 24, 22, 32],} \n",
+    "   \n",
+    "# Define a dictionary containing employee data \n",
+    "data2 = {'key': ['K0', 'K1', 'K2', 'K3'],\n",
+    "         'key1': ['K0', 'K0', 'K0', 'K0'],\n",
+    "         'Address':['Nagpur', 'Kanpur', 'Allahabad', 'Kannuaj'], \n",
+    "        'Qualification':['Btech', 'B.A', 'Bcom', 'B.hons']} \n",
+    " \n",
+    "# Convert the dictionary into DataFrame  \n",
+    "df = pd.DataFrame(data1)\n",
+    " \n",
+    "# Convert the dictionary into DataFrame  \n",
+    "df1 = pd.DataFrame(data2) \n",
+    "  \n",
+    " \n",
+    "print(df, \"\\n\\n\", df1) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "bab3daf7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>key</th>\n",
+       "      <th>key1</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>K0</td>\n",
+       "      <td>K0</td>\n",
+       "      <td>Jai</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>K1</td>\n",
+       "      <td>K1</td>\n",
+       "      <td>Princi</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>K2</td>\n",
+       "      <td>K0</td>\n",
+       "      <td>Gaurav</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>K3</td>\n",
+       "      <td>K1</td>\n",
+       "      <td>Anuj</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  key key1    Name  Age\n",
+       "0  K0   K0     Jai   27\n",
+       "1  K1   K1  Princi   24\n",
+       "2  K2   K0  Gaurav   22\n",
+       "3  K3   K1    Anuj   32"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a7d05ef7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>key</th>\n",
+       "      <th>key1</th>\n",
+       "      <th>Address</th>\n",
+       "      <th>Qualification</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>K0</td>\n",
+       "      <td>K0</td>\n",
+       "      <td>Nagpur</td>\n",
+       "      <td>Btech</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>K1</td>\n",
+       "      <td>K0</td>\n",
+       "      <td>Kanpur</td>\n",
+       "      <td>B.A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>K2</td>\n",
+       "      <td>K0</td>\n",
+       "      <td>Allahabad</td>\n",
+       "      <td>Bcom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>K3</td>\n",
+       "      <td>K0</td>\n",
+       "      <td>Kannuaj</td>\n",
+       "      <td>B.hons</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  key key1    Address Qualification\n",
+       "0  K0   K0     Nagpur         Btech\n",
+       "1  K1   K0     Kanpur           B.A\n",
+       "2  K2   K0  Allahabad          Bcom\n",
+       "3  K3   K0    Kannuaj        B.hons"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c4e0564b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>key_caller</th>\n",
+       "      <th>key1_caller</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>key</th>\n",
+       "      <th>key1</th>\n",
+       "      <th>Address</th>\n",
+       "      <th>Qualification</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>K0</td>\n",
+       "      <td>K0</td>\n",
+       "      <td>Jai</td>\n",
+       "      <td>27</td>\n",
+       "      <td>K0</td>\n",
+       "      <td>K0</td>\n",
+       "      <td>Nagpur</td>\n",
+       "      <td>Btech</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>K1</td>\n",
+       "      <td>K1</td>\n",
+       "      <td>Princi</td>\n",
+       "      <td>24</td>\n",
+       "      <td>K1</td>\n",
+       "      <td>K0</td>\n",
+       "      <td>Kanpur</td>\n",
+       "      <td>B.A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>K2</td>\n",
+       "      <td>K0</td>\n",
+       "      <td>Gaurav</td>\n",
+       "      <td>22</td>\n",
+       "      <td>K2</td>\n",
+       "      <td>K0</td>\n",
+       "      <td>Allahabad</td>\n",
+       "      <td>Bcom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>K3</td>\n",
+       "      <td>K1</td>\n",
+       "      <td>Anuj</td>\n",
+       "      <td>32</td>\n",
+       "      <td>K3</td>\n",
+       "      <td>K0</td>\n",
+       "      <td>Kannuaj</td>\n",
+       "      <td>B.hons</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  key_caller key1_caller    Name  Age key key1    Address Qualification\n",
+       "0         K0          K0     Jai   27  K0   K0     Nagpur         Btech\n",
+       "1         K1          K1  Princi   24  K1   K0     Kanpur           B.A\n",
+       "2         K2          K0  Gaurav   22  K2   K0  Allahabad          Bcom\n",
+       "3         K3          K1    Anuj   32  K3   K0    Kannuaj        B.hons"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.join(df1,lsuffix='_caller')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eaae7276",
    "metadata": {},
    "outputs": [],
    "source": []
